# takiyasha

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_EN.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/libtakiyasha/: __init__.py  common.py  exceptions.py  ncm.py  ncmcache.py  sniff.py
src/libtakiyasha/qmc/: __init__.py
src/libtakiyasha/qmc/ciphers/: __init__.py  keycryption.py  keyutils.py  legacy.py  legacyconstants.py  modern.py
src/takiyasha/: VERSION  __init__.py  __main__.py  __version__.py  _common.py  argdefs.py  cli.py  common.py  constants.py  core.py  entry.py  exceptions.py  loggingformatter.py  ncm.py  ncmcache.py  sniff.py  standardciphers.py  typehints.py  utils.py
src/takiyasha/algorithms/: __init__.py  common.py
src/takiyasha/algorithms/kgm/: __init__.py  ciphers.py
src/takiyasha/algorithms/ncm/: __init__.py
src/takiyasha/algorithms/noop/: __init__.py  ciphers.py
src/takiyasha/algorithms/qmc/: __init__.py  ciphers.py  keyutil.py
src/takiyasha/algorithms/tm/: __init__.py  ciphers.py
src/takiyasha/app/: cli.py
src/takiyasha/cli/: __init__.py  argdefs.py  constants.py  core.py  entry.py  utils.py
src/takiyasha/metadata/: ape.py  covergetter.py  flac.py  m4a.py  mp3.py  ogg.py
src/takiyasha/qmc/: __init__.py
src/takiyasha/qmc/ciphers/: __init__.py  keycryption.py  legacy.py  legacyconstants.py  modern.py
src/takiyasha/qmc/ciphers/binaries/: QMCv1-keystream-segment
src/takiyasha/tag/: complete.py  read.py  retrieve_convert.py  utils.py  write.py
takiyasha/: __init__.py  __main__.py  __version__.py  exceptions.py  metadata.py  typehints.py  utils.py
takiyasha/algorithms/: __init__.py  common.py
takiyasha/algorithms/kgm/: __init__.py  ciphers.py
takiyasha/algorithms/kgm/binaries/: kgm.v2.mask
takiyasha/algorithms/ncm/: __init__.py  _deprecated_decrypter.py  ciphers.py
takiyasha/algorithms/noop/: __init__.py  ciphers.py
takiyasha/algorithms/qmc/: __init__.py  _deprecated_decrypter.py  ciphers.py  key.py  keyutil.py
takiyasha/algorithms/tm/: __init__.py  ciphers.py
takiyasha/app/: cli.py
takiyasha/app/cli/: __init__.py  files.py  metadata.py  unlock.py
takiyasha/decryptions/algorithms/qmc/: __init__.py  ciphers.py  key.py
takiyasha/metadata/: __init__.py  ape.py  common.py  covergetter.py  flac.py  m4a.py  mp3.py  ogg.py
tests/: test_qmc.py
