[project]
name = "takiyasha"
dynamic = ["dependencies", "readme", "version"]
authors = [
    { name = "nukemiko" },
]
description = "Python 命令行文件解密工具"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
keywords = ["unlock", "music", "audio", "qmc", "ncm", "mflac", "mgg", "netease", "163", "qqmusic"]

[project.urls]
"Homepage" = "https://github.com/nukemiko/takiyasha"
"Bug Tracker" = "https://github.com/nukemiko/takiyasha/issues"
"Releases" = "https://github.com/nukemiko/takiyasha/releases"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 46.4.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
readme = { file = ["README.md"], content-type = 'text/markdown' }
version = { file = "src/takiyasha/VERSION" }
