[metadata]
name = takiyasha
version = file: src/takiyasha/VERSION
description = 使用 Python 编写的加密音乐解锁工具
long_description = file: README.md
long_description_content_type = text/markdown
keyword = unlock, music, audio, qmc, ncm, mflac, mgg, kgm, vpr, netease, 163, qqmusic, kugou, kgmusic
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
url = https://github.com/nukemiko/takiyasha
project_urls =
    Documentation = https://github.com/nukemiko/takiyasha
    Source = https://github.com/nukemiko/takiyasha

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires =
    setuptools >= 46.4.0
install_requires =
    click
    mutagen
    pycryptodomex
    requests

[options.package_data]
takiyasha.algorithms.kgm = binaries/kgm.v2.mask
takiyasha.algorithms.qmc = binaries/qmc.v1.stream.segment
takiyasha = VERSION

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    takiyasha = takiyasha.app.cli:main
    takiyasha-unlocker = takiyasha.app.cli:main
    unlocker = takiyasha.app.cli:main
