[metadata]
name = takiyasha
version = attr: takiyasha.__VERSION__
description = Python 版本的音乐解密工具
long_description = file: README.md
long_description_content_type = text/markdown
keywords = unlock, music, audio, qmc, ncm, mflac, mgg, netease, 163, qqmusic
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Multimedia :: Sound/Audio
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
url = https://github.com/nukemiko/takiyasha/tree/remaked
project_urls =
    Documentation = https://github.com/nukemiko/takiyasha/tree/remaked
    Source = https://github.com/nukemiko/takiyasha/tree/remaked
    Releases = https://github.com/nukemiko/takiyasha/releases

[options]
package_dir =
    = src
packages = find:
include_package_data = True
setup_requires =
    setuptools >= 46.4.0
install_requires =
    pyaes

[options.packages.find]
where = src

[options.package_data]
takiyasha.qmc.ciphers = binaries/QMCv1-keystream-segment

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
