[metadata]
name = takiyasha
version = attr: libtakiyasha.__VERSION__
description = Python 版本的音乐解密工具
long_description = file: README.md
long_description_content_type = text/markdown
keywords = unlock, music, audio, qmc, ncm, mflac, mgg, netease, 163, qqmusic
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Multimedia :: Sound/Audio
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
url = https://github.com/nukemiko/takiyasha
project_urls =
    Documentation = https://github.com/nukemiko/takiyasha
    Source = https://github.com/nukemiko/takiyasha
    Releases = https://github.com/nukemiko/takiyasha/releases
maintainer = nukemiko
author = nukemiko

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >= 3.8
setup_requires =
    setuptools >= 46.4.0
install_requires =
    pyaes
    colorama
    mutagen
    MusicTagFindUtils >= 0.1.2
    requests

[options.packages.find]
where = src

[options.package_data]
libtakiyasha.qmc.ciphers = binaries/QMCv1-keystream-segment

[options.entry_points]
console_scripts =
    takiyasha = takiyasha.__main__:main

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
